2010-02-16  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Add a new WebKitWebSettings setting, 'auto-resize-window', set to
        FALSE by default, that when enabled will apply any resizes or
        moves done by a page through various DOM methods (moveTo,
        resizeTo, moveBy, resizeBy).

        * WebCoreSupport/ChromeClientGtk.cpp:
        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):
        (webkit_web_settings_set_property):
        (webkit_web_settings_get_property):
        (webkit_web_settings_copy):

2010-02-15  Emilio Pozuelo Monfort  <pochu27@gmail.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Fails to build on GNU/Hurd because of PATH_MAX usage
        https://bugs.webkit.org/show_bug.cgi?id=34920

        Use dynamic allocation instead of fixed PATH_MAX size buffers to
        fix the build on GNU/Hurd, where PATH_MAX is undefined.

        * tests/testmimehandling.c:
        (main):
        * tests/testwebview.c:
        (main):

2010-02-14  Diego Escalante Urrelo  <descalante@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [gtk] WebKitDownload's currentSize property is guint, should be guint64
        https://bugs.webkit.org/show_bug.cgi?id=34829

        Actually use a guint64 for current-size property in WebKitDownload, we
        were using a guint which is likely the cause for wrong sizes for files
        over 4 Gb.

        * webkit/webkitdownload.cpp:

2010-02-09  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Xan Lopez.

        [GTK] Hits assertion on history back, with page cache enabled, in specific conditions
        https://bugs.webkit.org/show_bug.cgi?id=34773

        Make sure cached frames have their scrollbars disconnected from
        the WebView's adjustments.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::savePlatformDataToCachedFrame):
