@@ -409,7 +409,8 @@ WebKitDownload* webkit_download_new_with_handle(WebKitNetworkRequest* request, W
     g_return_val_if_fail(request, NULL);
 
     ResourceHandleInternal* d = handle->getInternal();
-    soup_session_pause_message(webkit_get_default_session(), d->m_msg);
+    if (d->m_msg)
+        soup_session_pause_message(webkit_get_default_session(), d->m_msg);
 
     WebKitDownload* download = WEBKIT_DOWNLOAD(g_object_new(WEBKIT_TYPE_DOWNLOAD, "network-request", request, NULL));
     WebKitDownloadPrivate* priv = download->priv;
@@ -480,7 +481,8 @@ void webkit_download_start(WebKitDownload* download)
         priv->resourceHandle->setClient(priv->downloadClient);
 
         ResourceHandleInternal* d = priv->resourceHandle->getInternal();
-        soup_session_unpause_message(webkit_get_default_session(), d->m_msg);
+        if (d->m_msg)
+            soup_session_unpause_message(webkit_get_default_session(), d->m_msg);
     }
 
     priv->timer = g_timer_new();
