@@ -1,3 +1,14 @@
+2010-02-16  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Reviewed by Xan Lopez.
+
+        Check if the handle has a SoupMessage before trying to use
+        it. This will be the case in non-HTTP(S) URLs.
+
+        * webkit/webkitdownload.cpp:
+        (webkit_download_new_with_handle):
+        (webkit_download_start):
+
 2010-02-16  Xan Lopez  <xlopez@igalia.com>
 
         Reviewed by Gustavo Noronha.
